--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ToDo List</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
         integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
@@ -15,7 +15,12 @@
 <body>
     
     <div id="root">
-        <h1>To Do List</h1>
+        <h1>ToDo List</h1>
+
+        <div class="input-container">
+            <input type="text" name="" id="" placeholder="Nuova azione" v-model="newAction">
+            <button @click="addAction">Aggiungi</button>
+        </div>
 
         <div class="list-container">
             <ul>
